
        - Moved namespace, namespaceURI, namespacePrefix and cppNamespace in the *.in
        files.

        * dom/make_names.pl:
        * html/HTMLAttributeNames.in:
        * html/HTMLTagNames.in:
        * svg/svgattrs.in:
        * svg/svgtags.in:
        * svg/xlinkattrs.in:
        * xml/xmlattrs.in:

2008-06-09  Tor Arne Vestbø  <tavestbo@trolltech.com>

        Reviewed by Darin.

        Incorporated Darin's comments to bug 18965.

        * rendering/RenderTheme.cpp:

2008-06-08  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Adler.

        Inherit document.URL from parent's document.URL, not document.baseURI.

        https://bugs.webkit.org/show_bug.cgi?id=19257

        Tests: http/tests/security/cookies/assign-document-url.html
               http/tests/security/cookies/base-about-blank.html
               http/tests/security/cookies/base-tag.html
               http/tests/security/cookies/basic.html

        * dom/Document.cpp:
        (WebCore::Document::open):

2008-06-08  Kevin Ollivier  <kevino@theolliviers.com>

        Reviewed by Darin Adler.

        Fix font asserts in wx port. Our computeHash function should generate the same hash
        for two identical fonts which are different objects, which it wasn't doing before.
        
        https://bugs.webkit.org/show_bug.cgi?id=19310

        * platform/graphics/wx/FontPlatformData.h:
        (WebCore::FontPlatformData::computeHash):

2008-06-08  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        - fix <rdar://problem/5961977> Crash in RenderBlock::layoutColumns()

        Test: fast/multicol/content-height-zero-crash.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::layoutColumns): Changed to not keep creating
        overflow columns that have zero height, because they do not help with
        fitting content in.

2008-06-08  Adam Roben  <aroben@apple.com>
